refeat(index.html, about us): fixed linking

--- a/pages/about_us/index.html
+++ b/pages/about_us/index.html
@@ -39,7 +39,7 @@
 
 <section class="section-hero">
 
-     <img src="./assets/img/bus1.jpg" alt="wallpaper" class="wallpaper">
+     <img src="./assets/img/bus1fixed.jpg" alt="wallpaper" class="wallpaper">
 
     <div class="text-hero">
          <h2>
